--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Galina",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/ui": "^4.0.29",
     "browser-sync": "^2.27.9",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -25,6 +26,7 @@
     "jquery": "^3.6.0",
     "jquery-form-styler": "^2.0.2",
     "mixitup": "^3.3.1",
+    "rateyo": "^2.3.2",
     "sass": "^1.50.0",
     "slick-carousel": "^1.8.1"
   },
